Fix the title spacing in mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -308,4 +308,10 @@
 		margin: auto;
 	}
 
+	@media only screen and (max-width: 480px){
+		
+			header#title{
+				padding-top: 4rem;
+			}
+		}
 /*Blog Specific*/
